<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/char_bakground2"
    tools:context="com.example.bang.ShowCharacter">

    <ImageView
        android:id="@+id/SCportretview"
        android:layout_width="298dp"
        android:layout_height="172dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/SCcharacter"
        app:layout_constraintEnd_toStartOf="@+id/SCroleview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SCname"
        app:srcCompat="@drawable/calamity_janet" />

    <ImageView
        android:id="@+id/SCroleview"
        android:layout_width="219dp"
        android:layout_height="172dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/SCrole"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SCportretview"
        app:layout_constraintTop_toBottomOf="@+id/SCname"
        app:srcCompat="@drawable/bandit" />

    <TextView
        android:id="@+id/SCcharacter"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="70dp"
        android:text="@string/user1"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SCportretview"
        app:layout_constraintStart_toStartOf="@+id/SCportretview"
        app:layout_constraintTop_toBottomOf="@+id/SCportretview" />

    <TextView
        android:id="@+id/SCrole"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="80dp"
        android:text="@string/user1"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SCroleview"
        app:layout_constraintStart_toStartOf="@+id/SCroleview"
        app:layout_constraintTop_toBottomOf="@+id/SCroleview" />

    <TextView
        android:id="@+id/SCname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="8dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/SCportretview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Bwroc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/wrosc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/SCrole"
        app:layout_constraintTop_toBottomOf="@+id/SCrole" />
</androidx.constraintlayout.widget.ConstraintLayout>
